k8s/overlays/prod/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: 922024167800.dkr.ecr.us-east-1.amazonaws.com/ai-platform/api-gateway:1.6.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
        startupProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8082
          failureThreshold: 60
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8082
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8082
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 5
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
